// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-time renderEditorContent should render editor content 1`] = `
.c0 {
  height: 9.375rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1rem;
}

.c6 {
  fill: #4475E3;
  cursor: pointer;
  opacity: 0;
  pointer-events: none;
}

.c5 {
  height: 3.5rem;
  width: 12.5rem;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #F7F8FA;
  border-radius: 0.25rem;
  border: 0.0625rem solid #F7F8FA;
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
}

.c5 svg {
  fill: #808080;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
}

.c8 {
  margin-top: 2rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c10 {
  fill: #4475E3;
  margin-right: 0.625rem;
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              <div
                class="c5"
              >
                Date
                <svg />
              </div>
            </div>
            <svg
              class="c6"
            />
          </div>
          <div
            class="c7"
          />
        </div>
      </div>
      <div
        class="c8"
      >
        <div
          class="c2"
        >
          <div
            class="c9"
            data-testid="date-time-options-add-row"
          >
            <svg
              class="c10"
            />
            <div
              class="c11"
            >
              Add 
              Time
            </div>
          </div>
          <div
            class="c7"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`date-time renderPreviewContent should render preview content 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #B3C6F1;
}

.c2 > :nth-child(2) {
  color: #4475E3;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  pointer-events: none;
  cursor: default;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  row-gap: 1.875rem;
  margin-bottom: 9.375rem;
  font-family: Inter,sans-serif;
  font-size: 1.25rem;
  line-height: 1.625rem;
  font-weight: 600;
  font-style: normal;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
              data-testid="date-picker-carousel-item-month-0"
            >
              MAR
            </div>
            <div
              class="c5"
              data-testid="date-picker-carousel-item-day-0"
            >
              16
            </div>
            <div
              class="c5"
              data-testid="date-picker-carousel-item-year-0"
            >
              2022
            </div>
          </div>
          <div
            class="c4"
          >
            <div
              class="c6"
              data-testid="date-picker-carousel-item-month-1"
            >
              APR
            </div>
            <div
              class="c6"
              data-testid="date-picker-carousel-item-day-1"
            >
              17
            </div>
            <div
              class="c6"
              data-testid="date-picker-carousel-item-year-1"
            >
              2023
            </div>
          </div>
          <div
            class="c4"
          >
            <div
              class="c5"
              data-testid="date-picker-carousel-item-month-2"
            >
              MAY
            </div>
            <div
              class="c5"
              data-testid="date-picker-carousel-item-day-2"
            >
              18
            </div>
            <div
              class="c5"
              data-testid="date-picker-carousel-item-year-2"
            >
              2024
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`date-time renderPreviewContent should render preview content 2`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #B3C6F1;
}

.c3 > :nth-child(2) {
  color: #4475E3;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  pointer-events: none;
  cursor: default;
}

.c8 {
  row-gap: 0.9375rem;
  width: 8.125rem;
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
}

.c8 > :nth-child(2) {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.625rem;
  column-gap: 0.625rem;
}

.c11 {
  width: 2.8125rem;
  -webkit-flex: unset !important;
  -ms-flex: unset !important;
  flex: unset !important;
}

.c2 {
  margin-bottom: 9.0625rem;
  padding: 0 1.5625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 0.9375rem;
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
}

.c4 > :nth-child(2) {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3 c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
                data-testid="date-time-picker-carousel-item-date-0"
              >
                Sun, Apr 16
              </div>
            </div>
            <div
              class="c5"
            >
              <div
                class="c7"
                data-testid="date-time-picker-carousel-item-date-1"
              >
                Mon, Apr 17
              </div>
            </div>
            <div
              class="c5"
            >
              <div
                class="c6"
                data-testid="date-time-picker-carousel-item-date-2"
              >
                Tue, Apr 18
              </div>
            </div>
          </div>
          <div
            class="c3 c8"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <div
                  class="c6"
                  data-testid="time-picker-carousel-item-hour-0"
                >
                  11
                </div>
                <div
                  class="c7"
                >
                  :
                </div>
                <div
                  class="c6"
                  data-testid="time-picker-carousel-item-minute-0"
                >
                  59
                </div>
              </div>
              <div
                class="c7 c11"
                data-testid="time-picker-pm-0"
              />
            </div>
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <div
                  class="c7"
                  data-testid="time-picker-carousel-item-hour-1"
                >
                  12
                </div>
                <div
                  class="c7"
                >
                  :
                </div>
                <div
                  class="c7"
                  data-testid="time-picker-carousel-item-minute-1"
                >
                  00
                </div>
              </div>
              <div
                class="c7 c11"
                data-testid="time-picker-pm-1"
              >
                PM
              </div>
            </div>
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <div
                  class="c6"
                  data-testid="time-picker-carousel-item-hour-2"
                >
                  1
                </div>
                <div
                  class="c7"
                >
                  :
                </div>
                <div
                  class="c6"
                  data-testid="time-picker-carousel-item-minute-2"
                >
                  01
                </div>
              </div>
              <div
                class="c6 c11"
                data-testid="time-picker-pm-2"
              >
                AM
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`date-time renderPreviewContent should render preview content 3`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #B3C6F1;
}

.c3 > :nth-child(2) {
  color: #4475E3;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  pointer-events: none;
  cursor: default;
}

.c4 {
  row-gap: 0.9375rem;
  width: 13.75rem;
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 400;
  font-style: normal;
}

.c4 > :nth-child(2) {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 1.875rem;
  column-gap: 1.875rem;
}

.c9 {
  width: 2.8125rem;
  -webkit-flex: unset !important;
  -ms-flex: unset !important;
  flex: unset !important;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  margin-bottom: 6.25rem;
  padding: 0 2.5rem;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3 c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                  data-testid="time-picker-carousel-item-hour-0"
                >
                  11
                </div>
                <div
                  class="c8"
                >
                  :
                </div>
                <div
                  class="c7"
                  data-testid="time-picker-carousel-item-minute-0"
                >
                  59
                </div>
              </div>
              <div
                class="c8 c9"
                data-testid="time-picker-pm-0"
              />
            </div>
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <div
                  class="c8"
                  data-testid="time-picker-carousel-item-hour-1"
                >
                  12
                </div>
                <div
                  class="c8"
                >
                  :
                </div>
                <div
                  class="c8"
                  data-testid="time-picker-carousel-item-minute-1"
                >
                  00
                </div>
              </div>
              <div
                class="c8 c9"
                data-testid="time-picker-pm-1"
              >
                PM
              </div>
            </div>
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                  data-testid="time-picker-carousel-item-hour-2"
                >
                  1
                </div>
                <div
                  class="c8"
                >
                  :
                </div>
                <div
                  class="c7"
                  data-testid="time-picker-carousel-item-minute-2"
                >
                  01
                </div>
              </div>
              <div
                class="c7 c9"
                data-testid="time-picker-pm-2"
              >
                AM
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`date-time renderPreviewContent should render preview content 4`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 0.75rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-column-gap: 0.75rem;
  column-gap: 0.75rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5625rem 0.75rem;
  height: 2.25rem;
  border-radius: 0.1875rem;
  border-style: solid;
  border-width: 0.0625rem;
  border-color: #4475E3;
  color: #474747;
  background-color: #FFFFFF;
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  cursor: pointer;
}

.c3 svg {
  fill: #4475E3;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div>
          <div
            class="c2"
          >
            <div
              class="c3"
              data-testid="date-time-range-preview-range-item-0"
            >
              04/17/2023
              <svg />
            </div>
            <div
              class="c3"
              data-testid="date-time-range-preview-range-item-1"
            >
              04/18/2023
              <svg />
            </div>
          </div>
        </div>
        <div
          class="c2"
        >
          <div
            class="c3"
            data-testid="date-time-range-preview-range-time-item-0"
          >
            12:00PM
            <svg />
          </div>
          <div
            class="c3"
            data-testid="date-time-range-preview-range-time-item-1"
          >
            12:00PM
            <svg />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
